apps/heimdall/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  namespace: halo # Change the namespace if needed
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      containers:
      - name: heimdall
        image: lscr.io/linuxserver/heimdall:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        volumeMounts:
        - name: config-volume
          mountPath: /config/
          readOnly: false
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: heimdall-config # Links to the ConfigMap defined below
