apps/heimdall/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  namespace: halo
spec:
  selector:
    app: heimdall
  ports:
  - name: http     
    port: 80      
    protocol: TCP 
    targetPort: 80
